# bookstore

./: .gitignore  .pre-commit-config.yaml  config.py  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 2023_04_08_20_29-232071f888f8_publisher.py  a5ff81a1a349_country.py  bddd0fb917e0_init.py
models/: db.py
src/: config.py  db.py  main.py  service.py
src/authors/: models.py  router.py
src/book/: models.py  router.py
