[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.95.0"}
alembic = "^1.10.2"
sqlmodel = "^0.0.8"
psycopg2-binary = "^2.9.5"
asyncpg = "^0.27.0"
black = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
